--- a/index.html
+++ b/index.html
@@ -30,16 +30,16 @@
             </a>
           </li>
           <li class="svg-item">
-            <a href="" target="_blank" rel="noopener noreferrer" aria-label="facebook" class="svg-link link">
+            <a href="" target="_blank" rel="noopener noreferrer" aria-label="instagram" class="svg-link link">
               <svg class="social-icon" width="30" height="30">
-                <use href="./images/icons.svg#icon-facebook-member"></use>
+                <use href="./images/icons.svg#icon-instagram-member"></use>
               </svg>
             </a>
           </li>
           <li class="svg-item">
             <a href="" target="_blank" rel="noopener noreferrer" aria-label="facebook" class="svg-link link">
               <svg class="social-icon" width="30" height="30">
-                <use href="./images/icons.svg#icon-facebook-member"></use>
+                <use href="./images/icons.svg#icon-linkedin-member"></use>
               </svg>
             </a>
           </li>
