--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 			href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
 		/>
 		<link rel="stylesheet" href="./css/styles.css" />
+		<link rel="stylesheet" href="./css/animation.css" />
 		<title>SVG</title>
 	</head>
 	<body>
@@ -219,6 +220,24 @@
 			<button type="submit" class="forn-btn">Send</button>
 		</form>
 
+		<div class="container">
+			<div class="box"><p class="text">text</p></div>
+			<div class="box"><p class="text">text</p></div>
+			<div class="box"><p class="text">text</p></div>
+			<div class="box"><p class="text">text</p></div>
+			<div class="box"><p class="text">text</p></div>
+			<div class="box"><p class="text">text</p></div>
+			<div class="box"><p class="text">text</p></div>
+			<div class="box"><p class="text">text</p></div>
+			<div class="box"><p class="text">text</p></div>
+			<div class="box"><p class="text">text</p></div>
+			<div class="box"><p class="text">text</p></div>
+			<div class="box"><p class="text">text</p></div>
+			<div class="box"><p class="text">text</p></div>
+			<div class="box"><p class="text">text</p></div>
+			<div class="box"><p class="text">text</p></div>
+			<div class="box"><p class="text">text</p></div>
+		</div>
 		<script>
 			(() => {
 				document.querySelector(".js-speaker-form").addEventListener("submit", (e) => {
