--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 			rel="stylesheet"
 			href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
 		/>
-		<link rel="stylesheet" href="./css/styles.css" />
-		<link rel="stylesheet" href="./css/animation.css" />
+		<link rel="stylesheet" href="./css/main.min.css" />
+		
 		<title>SVG</title>
 	</head>
 	<body>
@@ -281,6 +281,7 @@
 			<button type="reset">reset</button>
 		</form>
 
+		 <!-- Animations -->
 		<div class="container-animation">
 			<div class="box"><p class="text">text</p></div>
 			<div class="box"><p class="text">text</p></div>
